fix layout heights, removing unnecessary scrollbars

--- a/src/app.css
+++ b/src/app.css
@@ -13,3 +13,7 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
+body {
+  margin: 0;
+}
